# dev-support

./: .gitignore  .gitmodules  README.md
autocomplete-testcase/: application.pro  main.cpp  mainwindow.cpp  mainwindow.h
cgal/: CMakeLists.txt  cgal-issue7271.cpp  cgal_tools.h  construct_nef3.cpp  convert.h  convert_to_nef.cpp  decompose_to_off.cpp  decompose_to_points.cpp  objects.h  off_to_nef.cpp  surface_mesh_to_nef.cpp
fmt-experiments/: CMakeLists.txt  Value.h  main.cpp
test-code/: nef_polyhedron_2-bug.cc
